*Empty MediaWiki Message*

--- a/Haorste.mw
+++ b/Haorste.mw
@@ -18,7 +18,7 @@
 |lokasie=
 |oppervlak=13,10
 }}
-'''Haorste''' ([[Zwols]]: ''Öörst'', [[Nederlaands]]: ''Haerst'') is een buurtschop en buurt in de [[gemiente (bestuur)|gemiente]] [[Zwolle]]. Haorste lig in de wiek [[Vechtlaanden]] en maakt daor samen met [[Brinkershoeke|Brinkers-oeke]] en [[Langen-olte]] diel vanuut. In [[2017]] ad Haorste 265 inwoners op een gebied van 13,10 veerkante kilometer. De buurt Haorste is met een bevölkingsdichtheid van 20,2 dunbevolkt. In Haorste woont veural [[boer|boeren]]. Ten oosten van de [[Rieksweg 28|A28]] lig de polder [[Haorstermärkte]]. Töt [[1 augustus]] [[1967]] beheurden Haorste töt de gemiente [[Zwollerkärspel]]. Zo midden in de buurt lig de egräven [[Bomhofsplasse]]. In et westen löp de [[Vechte]].
+'''Haorste''' ([[Zwols]]: ''Öörst'', [œː<small>ʀ</small>st]) is een buurtschop en buurt in de [[gemiente (bestuur)|gemiente]] [[Zwolle]]. Haorste lig in de wiek [[Vechtlaanden]] en maakt daor samen met [[Brinkershoeke|Brinkers-oeke]] en [[Langen-olte]] diel vanuut. In [[2017]] ad Haorste 265 inwoners op een gebied van 13,10 veerkante kilometer. De buurt Haorste is met een bevölkingsdichtheid van 20,2 dunbevolkt. In Haorste woont veural [[boer|boeren]]. Ten oosten van de [[Rieksweg 28|A28]] lig de polder [[Haorstermärkte]]. Töt [[1 augustus]] [[1967]] beheurden Haorste töt de gemiente [[Zwollerkärspel]]. Zo midden in de buurt lig de egräven [[Bomhofsplasse]]. In et westen löp de [[Vechte]].
 
 == Geschiedenisse ==
 Bi'j de [[Bomhofsplasse]] in Haorste bint in [[1988]] en [[1989]] resten van [[Neanderthaler]]s evunnen. Een bewärkte [[Vuurstien|vuurstienen]] [[voestbiele]] uut et [[Vrog-Weichselien|Vrog]]-[[Weichselien]] is er ook evunnen. Disse voestbiele is meer as 74.000 jaor old. Et blik een slim zelseme vondst te wean die bewiest dät er al meansen (gien Homo sapiens, de medärne means) waren in et [[Vechtdal]] veurdät er hier medärne [[Homo sapiens|meansen]] waren<ref> Atlas van de Vecht, https://issuu.com/provicieoverijssel/docs/atlas_van_de_vecht_lr/56</ref>.
