*Empty MediaWiki Message*

--- a/Heerde.mw
+++ b/Heerde.mw
@@ -18,7 +18,7 @@ netnummer = 038, 0578  |
 postcode = 8180-8181, 8190-8191, 8193-8194 |
 webstee = [http://www.heerde.nl/ www.heerde.nl] |
 }}
-'''Heerde''' ({{Audio|089_Heerde.ogg|<small>uutsprake</small>}}) is n plaatse en [[gemiente (bestuur)|gemeente]] in de [[Nederlaand|Nederlandse]] provinsie [[Gelderlaand|Gelderland]]. De gemeente had op 1 mei 2013 18.486 inwoners (bron: CBS) en hef n oppervlakte van 80,42 [[vierkaante kilemeter|km²]] (waorvan 1,67&nbsp;km² water). Heerde beheurt töt de zogenaamde ''[[Biebelgordel]]''.
+'''Heerde''' (NL {{Audio|089_Heerde.ogg|<small>uutsprake</small>}}) is n plaatse en [[gemiente (bestuur)|gemeente]] in de [[Nederlaand|Nederlandse]] provinsie [[Gelderlaand|Gelderland]]. De gemeente had op 1 mei 2013 18.486 inwoners (bron: CBS) en hef n oppervlakte van 80,42 [[vierkaante kilemeter|km²]] (waorvan 1,67&nbsp;km² water). Heerde beheurt töt de zogenaamde ''[[Biebelgordel]]''.
 
 == Geschiedenis ==
 Töt 125.000 jaor eleden lag hier n [[gletsjer]] uut de [[iestied]] waordeur de stuwwallen, zo as de [[Renderklippen]], ontstunnen. Opgravingen laoten zien dat de streek al in 4500 v. Chr. bewoond was. In de middeleeuwen ontstunnen der twee woonkernen in t gebied van wat noe de gemeente Heerde is. De kapel van Heerde wordden in t jaor [[1176]] onofhankelik van [[Epe]].
