--- a/Luttenbarg.mw
+++ b/Luttenbarg.mw
@@ -1,10 +1,10 @@
 {{Ploats in Nederlaand
 | naam = Luttenbarg
-| soorte = Doarp
+| soorte = Dörp
 | bestansnaam vlagge = 
 | bestansnaam wapen = 
 | lokasie =
-| gemeente = [[Roalte]]
+| gemeente = [[Raolte]]
 | oppervlak =
 | oppervlak laand =
 | oppervlak water =
@@ -20,19 +20,18 @@
 | region = NL-OV
 }}
 
-'''Luttenbarg''' is n [[daarp|doarp]] in de gemeente van [[Roalte]] in [[Oaweriessel]]. An t eande van [[2003]] har t ongevear 2256 inwonners. Op t zuudn van Luttenbarg he'j n natuurgebeed wat n zelfden naam hef, met völle bos en wat [[heade]]. t Is nen kleainen stuwwal met t heugste peunt op 31 meter boawn [[NAP]]. t Is n vriejlignd deel van de [[Sallaandse Heuwelrugge]].
+'''Luttenbarg''' is n [[daarp|dörp]] in de gemeente van [[Roalte|Raolte]] in [[Oaweriessel|Oaveriessel]]. An t eade van [[2003]] hadde et ongeveer 2256 inwoners. In t zuden van Luttenbarg is ter een natuurgebied wat desölfde name hef, met völle bos en wat [[heide]]. Dit natuurgebied is een kleine [[stuwwalle]]   met et heugste punt op 31 meter boaven [[NAP]]. t Is een vri'jligend deel van de [[Sallaandse Heuvelrugge]].
 
-De boern in en roondum t doarp doot vuural met melkbeeste.
+De boeren in en rondumme et dörp hebt veural melkkoeën.
 
-Kortbie t doarp he'j n vriejetiedspark zo as ne camping en n park met vakaansiehuuskes. Op t zuudoosten he'j n stroatnracebaan de ''Luttenbargreenk''. hier wördn van [[1971]] töt an [[1989]] internasjonale motorraces eheuldn. In Luttenbarg zitt ook t Landbouwmuseum ''De Laarman'' en t [[kloomp]]enspul ''Diekman'', woer noar oold ambacht kloompn emaakt wordt. Miln in t doarp steet seend [[1915]] nen mariagrot.
+Körtbi'j et dörp is er een vri'jetiedspark zo as een camping en een park met vekaantiehuusies. In t zuudoosten he-j een straotenracebaan de ''Luttenbargreenk''. Hier wörden van [[1971]] töt an [[1989]] internationale motorraces eheulden. In Luttenbarg zit ook et laandbouwmuseum ''De Laarman'' en t [[kloomp|klomp]]enspul ''Diekman'', waor nao old ambacht klompen emaakt wördt. Midden in et dörp stiet sinds [[1915]] een mariagrotte.
 
-Duur t doarp löp de laandelike fietsroute 15 Boerenlandroute. t Doarp is slecht te bereiken met t OV. De bushalte den't t körste bie lig, is op 3,5 km ofstaand, noabie [[Roalte]] en [[Lemelerveeld]] en in t wekneande keump dr ginne busse.
+Deur et dörp hen löp de laandelike fietsroute 15 Boerenlaandroute. t Dörp is slecht te bereiken met t OV. De bushalte die ast körtste bi'j lig, is op 3,5 km ofstaand, körtbi'j [[Roalte|Raolte]] en [[Lemelerveld]] en in et wekende kump er helemaole geen busse.
 
 ==Mooi um te weten==
-*Luttenbarg trekt joarliks völle leu oet heel [[Neerlaand]], umdet der tiedens t Luttenbergs Feest t laandelik bekeande [[zwientietikken]] edoan wörd.
+*Luttenbarg trekt jaorliks völle leu uut heel [[Nederlaand]], umdet der tiedens t Luttenbergs Feest t laandelik bekende [[zwientietikken]] edaon wördt.
 
+{{Dialekt|sdz}}
 {{Roalte}}
-
-[[Kategorie:Tweants artikel]]
 [[Kategorie:Plaatse in Oaveriessel]]
 [[Kategorie:Roalte]]
