--- a/Botswana.mw
+++ b/Botswana.mw
@@ -30,7 +30,7 @@
 |umskrieving2=
 }}
 
-'''Botswana''', officieel de '''Republik Botswana''' (in et [[Setswana (språke)|setswana]]: '''Lefatshe la Botswana''' en in et [[Kalanga (språke)|kalanga]]: ''Hango yeBotswana'') is en land in et süden van et wearlddeyl [[Afrika]]. et ligt med de klokke med an [[Zimbabwe]] in et noordousten, [[Zuud-Afrika|Süüdafrika]] in et süden en süüdousten en [[Namibie]] in et westen en noorden. Botswana is vulleydig ümslöäten döär land en höyvdsakelik vlak. Souwat 70 procent van Botswana is deyl van de [[Kalahariwööste]]. Ouk hevt et noch ne slecht definieerde grense van en paar hunderd meter med et land [[Zambia]], dee anegeaven wördt döär de rivyr de [[Zambezi (rivyr)|Zambezi]]. 
+'''Botswana''', officieel de '''Republik Botswana''' (in et [[Setswana (språke)|setswana]]: ''Lefatshe la Botswana'' en in et [[Kalanga (språke)|kalanga]]: ''Hango yeBotswana'') is en land in et süden van et wearlddeyl [[Afrika]]. et ligt med de klokke med an [[Zimbabwe]] in et noordousten, [[Zuud-Afrika|Süüdafrika]] in et süden en süüdousten en [[Namibie]] in et westen en noorden. Botswana is vulleydig ümslöäten döär land en höyvdsakelik vlak. Souwat 70 procent van Botswana is deyl van de [[Kalahariwööste]]. Ouk hevt et noch ne slecht definieerde grense van en paar hunderd meter med et land [[Zambia]], dee anegeaven wördt döär de rivyr de [[Zambezi (rivyr)|Zambezi]]. 
 
 Med mär sou'n 2,3 miljoon lüde is et eyne van de dünstbevolkte landen van de wearld. Ungeveyr 10 procent dårvan woanet in [[Gaborone]], de höyvdstad en gröätste stad van et land. Botswana was lange eyne van de armste landen van de wearld med in de jåren 60 van de 20. eywe noch en döärsneyde jårinkummen van de man ungeveyr €68. Seyd dee tyd hevt sik Botswana untwikkeld töt land med en döärsneyde inkummen en eyne van de snelstgroiende [[ekonomie]]n van de wearld.<ref>[https://www.africaportal.org/publications/consolidating-democratic-governance-in-southern-africa-botswana/ Africaportal.org. "Consolidating Democratic Governance in Southern Africa: Botswana". Maundeni, Zibani. Mpabanga, Dorothy. Mfundisi, Adam. Skreaven up 1 january 2007, bekeaken up 28 mei 2020.]</ref> 
 
@@ -39,7 +39,7 @@ Sou'n 200.000 jår terügge warren de ''[[Homo sapiens]]'' de eyrste inwoaners. 
 
 De ekonomy drait up [[mienbouw|mynbouw]], veyholderye en [[toerisme|turisme]]. Nen warkenden in Botswana had in döärsneyde in [[2019]] sou'n € 15.129,76 to besteaden.<ref>[https://tradingeconomics.com/botswana/gdp-per-capita-ppp Tradingeconomics.com. "Botswana GDP per capita PPP."] Bekeaken up den 31. määrt 2021.]</ref> Dat is eyne van höygste cyfers van Afrika.<ref>[https://www.cia.gov/the-world-factbook/countries/botswana/ The World Factbook. "Botswana". Central Intelligence Agency (2014). Bekeaken up 16 april 2014.]</ref> Et houge [[bruto binnenlaands produkt|BBP]] (wat skattet et up dree nå höygste van Afrika) sorget dat et land ne redelik houge leavensstandaard hevt en de höygste untwikkelingsindeks van [[sahara|subsaharaansk]] Afrika.<ref>[http://www.nationsonline.org/oneworld/GNI_PPP_of_countries.htm Gross national income (GNI) – Nations Online Project] Nationsonline.org. Bekeaken up 27 October 2016.]</ref>
 
-Botswana is lid van de [[Afrikaanske Uny]], de [[Südelik-Afrikaanske Untwikkelingsgemeenskap]], et britske Gemenebest en de [[Verenigde Nasies|Vereynigde Natys]]. Et land hevt swår te lyden ehad under nen uutbraak van [[HIV/AIDS]]. Undanks de vorholdingswys good spreide behandelingen en vöärlichting oaver wat de lüde der an künnet doon üm et te vöärkummen, steyg et antal lüde med AIDS van 290.000 in 2005 töt 320.000 in 2013.<ref>[https://web.archive.org/web/20160620173755/http://files.unaids.org/en/media/unaids/contentassets/documents/unaidspublication/2014/unaids_gap_report_en.pdf (Archiveerden PDF) "The Gap Report". UN AIDS, Geneve (2014) Bekeaken up 21 juni 2016.</ref>. Med 20% van de inwoaners besmetted hevt Botswana de darde-höygste besmettingsgråd.
+Botswana is lid van de [[Afrikaanske Uny]], de [[Südelik-Afrikaanske Untwikkelingsgemeenskap]], et britske Gemenebest en de [[Verenigde Nasies|Vereynigde Natys]]. Et land hevt swår te lyden ehad under nen uutbraak van [[HIV/AIDS]]. Undanks de vorholdingswys good spreide behandelingen en vöärlichting oaver wat de lüde der an künnet doon üm et te vöärkummen, steyg et antal lüde med AIDS van 290.000 in 2005 töt 320.000 in 2013.<ref>[https://web.archive.org/web/20160620173755/http://files.unaids.org/en/media/unaids/contentassets/documents/unaidspublication/2014/unaids_gap_report_en.pdf (Archiveerden PDF) "The Gap Report". UN AIDS, Geneve (2014) Bekeaken up 21 juni 2016.]</ref>. Med 20% van de inwoaners besmetted hevt Botswana de darde-höygste besmettingsgråd.
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
