--- a/Botswana.mw
+++ b/Botswana.mw
@@ -34,7 +34,7 @@
 
 Med mär sou'n 2,3 miljoon lüde is et eyne van de dünstbevolkte landen van de wearld. Ungeveyr 10 procent dårvan woanet in [[Gaborone]], de höyvdstad en gröätste stad van et land. Botswana was lange eyne van de armste landen van de wearld med in de jåren 60 van de 20. eywe noch en döärsneyde jårinkummen van de man ungeveyr €68. Seyd dee tyd hevt sik Botswana untwikkeld töt land med en döärsneyde inkummen en eyne van de snelstgroiende [[ekonomie]]n van de wearld.<ref>[https://www.africaportal.org/publications/consolidating-democratic-governance-in-southern-africa-botswana/ Africaportal.org. "Consolidating Democratic Governance in Southern Africa: Botswana". Maundeni, Zibani. Mpabanga, Dorothy. Mfundisi, Adam. Skreaven up 1 january 2007, bekeaken up 28 mei 2020.]</ref> 
 
-Sou'n 200.000 jår terügge warren de ''[[Homo sapiens]]'' de eyrste inwoaners. De [[Tswana (volk)|Tswana]] sint en volk wat afstamt van [[Bantoesproaken|bantu]]volker dee as buren en herders rund et jår 600 vanuut et noorden up et süden an tröäken. In [[1885]] [[kolonialisme|koloniseerden]] de [[Vereynigd Köäningryk|britten]] et en röpen et uut as beskarmd gebeed under de name ''Bechuanaland''. Nå de dekolonisaty wör Bechuanaland up den [[30 september|30. september]] van [[1966]] unafhangelik as ne republik van de [[Commonwealth of Nations]] en kreag de name Botswana.
+Sou'n 200.000 jår terügge warren de ''[[Homo sapiens]]'' de eyrste inwoaners. De [[Tswana (volk)|Tswana]] sint en volk wat afstamt van [[Bantoesproaken|bantu]]volker dee as buren en herders rund et jår 600 vanuut et noorden up et süden an tröäken. In [[1885]] [[kolonialisme|koloniseerden]] de [[Vereynigd Köäningryk|britten]] et en röpen et uut as beskarmd gebeed under de name ''Bechuanaland''. Nå de dekolonisaty wör Bechuanaland up den [[30 september|30. september]] van [[1966]] unafhangelik as ne republik van et [[Britske Gemenebest]] en kreag de name Botswana.
 <ref>[https://web.archive.org/web/20150323214332/http://www.generalknowledgefacts.com/2013/09/bechuanaland-was-former-name-of-botswana.html (Archiveerd) generalknowledgefacts.com. "Bechuanaland was the former name of Botswana". Bekeaken up 20 february 2018. Archiveerd up 23. määrt 2015]</ref> Seyd dee tyd is et ne republik med ofvaerdiging en stöädige en vreydige vorkesingen en stelselmåtig et laegste [[umkeuperieje|umköyperyegetal]] van Afrika seyd 1998.<ref>[https://web.archive.org/web/20180108105128/https://www.transparency.org/research/cpi/overview|archive-date=8 (Archiveerd) Transparency International. "overview of CPI indices". Bekeaken up den 8. january 2018.]</ref> Et is up dit ougenblik Afrika's öldste döärloupende demokraty.<ref>[http://news.bbc.co.uk/2/hi/africa/431726.stm BBC News Africa. "Election for Africa's oldest democracy". news.bbc.co.uk. Bekeaken up den 13. january 2019]</ref>
 
 De ekonomy drait up [[mienbouw|mynbouw]], veyholderye en [[toerisme|turisme]]. Nen warkenden in Botswana had in [[2019]] in döärsneyde sou'n € 15.129,76 to besteaden.<ref>[https://tradingeconomics.com/botswana/gdp-per-capita-ppp Tradingeconomics.com. "Botswana GDP per capita PPP."] Bekeaken up den 31. määrt 2021.]</ref> Dat is eyne van höygste cyfers van Afrika.<ref>[https://www.cia.gov/the-world-factbook/countries/botswana/ The World Factbook. "Botswana". Central Intelligence Agency (2014). Bekeaken up 16 april 2014.]</ref> Et houge [[bruto binnenlaands produkt|BBP]] (wat skattet et up dree nå höygste van Afrika) sorget dat et land ne redelik houge leavensstandaard hevt en de höygste untwikkelingsindeks van [[sahara|subsaharaansk]] Afrika.<ref>[http://www.nationsonline.org/oneworld/GNI_PPP_of_countries.htm Gross national income (GNI) – Nations Online Project] Nationsonline.org. Bekeaken up 27 October 2016.]</ref>
