--- a/Botswana.mw
+++ b/Botswana.mw
@@ -41,5 +41,15 @@ De ekonomy drait up [[mienbouw|mynbouw]], veyholderye en [[toerisme|turisme]]. N
 
 Botswana is lid van de [[Afrikaanske Uny]], de [[Südelik-Afrikaanske Untwikkelingsgemeenskap]], et britske Gemenebest en de Vor[[Verenigde Nasies|eynigde Natys]]. Et land hevt swår to lyden ehad under nen uutbraak van [[HIV/AIDS]]. Undanks de vorholdingswys good spreide behandelingen en vöärlichting oaver wat de lüde der an künnet doon üm et to vöärkummen, steyg et antal lüde med AIDS van 290.000 in 2005 töt 320.000 in 2013.<ref>[https://web.archive.org/web/20160620173755/http://files.unaids.org/en/media/unaids/contentassets/documents/unaidspublication/2014/unaids_gap_report_en.pdf (Archiveerden PDF) "The Gap Report". UN AIDS, Geneve (2014) Bekeaken up 21 juni 2016.]</ref>. Med 20% van de inwoaners besmetted hevt Botswana de darde-höygste besmettingsgråd.
 
+==Name==
+De name kümt van ''batswana'' wat ''Land van de Tswana'' bedüdet. Dårmed wist et up de gröätste grup inwoaners van et land.
+
+==Landsbeskryving==
+Wat uppervlakde angeyt (581,730 km²) is Botswana ungeveyr eaven grout as [[Fraankriek|Frankryk]] of [[Madagaskar]]. Botswana is vöärnamelik vlak en 70% is underdeyl van de [[Kalahari]]wööste. In et noordwesten ligt de [[Okavangodelta]], in et noorden de soltpanne van [[Makgadikgadi]]. Et land wördt deyls döärsneyden döär de [[Limpopo]]-rivyr, en de  [[Notwane]], [[Bonwapitse]], [[Mahalapye]], [[Lotsane]] en [[Motloutse]] mundet der in uut.
+
+==Planten en deers==
+Nöäst de rivyrbedden en wööste hevt Botswana ouk grasland en [[savanne]], wåras [[gnu]] en [[antilope]]n leavet. Botswana hevt eyne van de gröätste grupen [[Afrikaansken Wilden Hund|afrikaanske wilde hünde]]. In [[Nationaalpark Chobe]] woanet ne groute grup [[Afrikaansken Olifant|afrikaanske olifanten]] van de wearld. Et park beslöt ne vlakde van ungeveyr 11.000 km² en der leavet sou'n 350 voagelsoarten. Ouk sint der parken vöär de beskarming van deb [[nöäshoorn]] en [[flamingo]].
+
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
