--- a/Botswana.mw
+++ b/Botswana.mw
@@ -48,7 +48,7 @@ De name kümt van ''batswana'' wat ''Land van de Tswana'' bedüdet. Dårmed wist
 Wat uppervlakde angeyt (581,730 km²) is Botswana ungeveyr eaven grout as [[Fraankriek|Frankryk]] of [[Madagaskar]]. Botswana is vöärnamelik vlak en 70% is underdeyl van de [[Kalahari]]wööste. In et noordwesten ligt de [[Okavangodelta]], in et noorden de soltpanne van [[Makgadikgadi]]. Et land wördt deyls döärsneyden döär de [[Limpopo]]-rivyr, en de  [[Notwane]], [[Bonwapitse]], [[Mahalapye]], [[Lotsane]] en [[Motloutse]] mundet der in uut.
 
 ==Planten en deers==
-Nöäst de rivyrbedden en wööste hevt Botswana ouk grasland en [[savanne]], wåras [[gnu]] en [[antilope]]n leavet. Botswana hevt eyne van de gröätste grupen [[Afrikaansken Wilden Hund|afrikaanske wilde hünde]]. In [[Nationaalpark Chobe]] woanet ne groute grup [[Afrikaansken Olifant|afrikaanske olifanten]] van de wearld. Et park beslöt ne vlakde van ungeveyr 11.000 km² en der leavet sou'n 350 voagelsoarten. Ouk sint der parken vöär de beskarming van deb [[nöäshoorn]] en [[flamingo]].
+Nöäst de rivyrbedden en wööste hevt Botswana ouk grasland en [[savanne]], wåras [[gnu]] en [[antilope]]n leavet. Botswana hevt eyne van de gröätste grupen [[Afrikaansken Wilden Hund|afrikaanske wilde hünde]]. In [[Nationaalpark Chobe]] woanet ne groute grup [[Afrikaansken Olifant|afrikaanske olifanten]] van de wearld. Et park beslöt ne vlakde van ungeveyr 11.000 km² en der leavet sou'n 350 voagelsoarten. Ouk sint der parken vöär de beskarming van den [[nöäshoorn]] en [[flamingo]].
 
 
 [[Kategorie: Tweants artikel]]
