--- a/Manizja.mw
+++ b/Manizja.mw
@@ -1,6 +1,6 @@
 {{Infobox zanger
 | naam           = Manizja<br>(Manizja Dalerovna Sangin)
-| ofbeelding     = 
+| ofbeelding     = Manizha.png
 | umschrieving   = 
 | geboren        = [[8 juli]] [[1991]]
 | sturven        = 
