/* Planten en deers */

--- a/Botswana.mw
+++ b/Botswana.mw
@@ -48,10 +48,10 @@ De name kümt van ''batswana'' wat ''Land van de Tswana'' bedüdet. Dårmed wist
 Wat uppervlakde angeyt (581,730 km²) is Botswana ungeveyr eaven grout as [[Fraankriek|Frankryk]] of [[Madagaskar]]. Botswana is vöärnamelik vlak en 70% is underdeyl van de [[Kalahari]]wööste. In et noordwesten ligt de [[Okavangodelta]], in et noorden de soltpanne van [[Makgadikgadi]]. Et land wördt deyls döärsneyden döär de [[Limpopo]]-rivyr, en de  [[Notwane]], [[Bonwapitse]], [[Mahalapye]], [[Lotsane]] en [[Motloutse]] mundet der in uut.
 
 ===Planten en deers===
-Nöäst de rivyrbedden en wööste hevt Botswana ouk grasland en [[savanne]], wåras [[gnu]] en [[antilope]]n leavet. Botswana hevt eyne van de gröätste grupen [[Afrikaansken Wilden Hund|afrikaanske wilde hünde]]. In [[Nationaalpark Chobe]] woanet ne groute grup [[Afrikaansken Olifant|afrikaanske olifanten]] van de wearld. Et park beslöt ne vlakde van ungeveyr 11.000 km² en der leavet sou'n 350 voagelsoarten. Ouk sint der parken vöär de beskarming van den [[nöäshoorn]] en [[flamingo]].
+Nöäst de rivyrbedden en wööste hevt Botswana ouk grasland en [[savanne]], wåras [[gnu]] en [[antilope]]n leavet. Botswana hevt eyne van de gröätste grupen [[Afrikaansken Wilden Hund|afrikaanske wilde hünde]]. In [[Nationaalpark Chobe]] woant de groute grup [[Afrikaansken Olifant|afrikaanske olifanten]] van de wearld. Et park beslöt ne vlakde van ungeveyr 11.000 km² en der leavet sou'n 350 voagelsoarten. Ouk sint der parken vöär de beskarming van den [[nöäshoorn]] en den [[flamingo]].
 
 ===Miljööproblemen===
-Et land hevt slim last van verdröyging en verwöösting. Et is deyls verhülpen döär depe brunnen te slån. Uppervlaktewater hevt Botswana håste neet en minder as 5% van de landbouw kan geworden med wat der an reagen valt. De rest van de 95% van de landbouwinkumsten kümt uut veyholderye. Dat lätste geyt noch up de ölderwetske wyse van deyle weidegrunden, wat de verdröyging en grunderosy noch slimmer maket. Mär ümdat der töt nu to good geld verdeend wördt med veyholden wordt de veystapels enkel grötter en grötter.
+Et land hevt slim last van verdröyging en verwöösting. Dat wördt deyls verhülpen döär depe brunnen te slån. Uppervlaktewater hevt Botswana håste neet en minder as 5% van de landbouw kan geworden med wat der an reagen valt. De rest van de 95% van de landbouwinkumsten kümt uut veyholderye. Dat lätste geyt noch up de ölderwetske wyse van deylde weidegrunden wårby as vey vry rundlöpt en allens kaalvreat, wat de verdröyging en grunderosy noch slimmer maket. Mär ümdat der töt nu to good geld verdeend wördt med veyholden wordt de veystapels enkel grötter en grötter.
 
 
 [[Kategorie: Tweants artikel]]
