--- a/Botswana.mw
+++ b/Botswana.mw
@@ -51,8 +51,22 @@ Wat uppervlakde angeyt (581,730 km²) is Botswana ungeveyr eaven grout as [[Fraa
 Nöäst de rivyrbedden en wööste hevt Botswana ouk grasland en [[savanne]], wåras [[gnu]] en [[antilope]]n leavet. Botswana hevt eyne van de gröätste grupen [[Afrikaansken Wilden Hund|afrikaanske wilde hünde]]. In [[Nationaalpark Chobe]] woant de groute grup [[Afrikaansken Olifant|afrikaanske olifanten]] van de wearld. Et park beslöt ne vlakde van ungeveyr 11.000 km² en der leavet sou'n 350 voagelsoarten. Ouk sint der parken vöär de beskarming van den [[nöäshoorn]] en den [[flamingo]].
 
 ===Miljööproblemen===
-Et land hevt slim last van verdröyging en verwöösting. Dat wördt deyls verhülpen döär depe brunnen te slån. Uppervlaktewater hevt Botswana håste neet en minder as 5% van de landbouw kan geworden med wat der an reagen valt. De rest van de 95% van de landbouwinkumsten kümt uut veyholderye. Dat lätste geyt noch up de ölderwetske wyse van deylde weidegrunden wårby as vey vry rundlöpt en allens kaalvreat, wat de verdröyging en grunderosy noch slimmer maket. Mär ümdat der töt nu to good geld verdeend wördt med veyholden wordt de veystapels enkel grötter en grötter.
+Et land hevt slim last van verdröyging en verwöösting. Dat wördt deyls verhülpen döär depe brunnen te slån. Uppervlaktewater hevt Botswana håste neet en minder as 5% van de landbouw kan geworden med wat der an reagen valt. De rest van de 95% van de landbouwinkumsten kümt uut veyholderye. Dat lätste geyt noch up de ölderwetske wyse van deylde weidegrunden wårby as vey vry rundlöpt en allens kaalvreat, wat de verdröyging en grunderosy noch slimmer maket. Mär ümdat der töt nu to good geld verdeend wördt med veyholden wordt de veystapels enkel grötter en grötter. Et botswaanske busk- en landskapsbeheyr is begünnen üm verskillende inheymske büsken weader terügge to planten in gemeenskappen in Kgalagadi-süüd, Kweneng-noord en Boteti.
 
+Årmode is volgens et Ontwikkelingsprogramma van de Voreynigde Natys (UNDP) achterliggende probleem by de uutbüting van grundstoffen. Üm dat teagen to gån is de UNDP gangs üm gemeenskappelike grundbeheyrsprojekten up te starten.
+
+== Regeyring ==
+Botswana hevt de öldste demokratiske grundwet van Afrika. Dee regeyringsförm is republik, wårby den regeyringsleider medeyne ståtshöyvd is. Hee wördt eköäsen döär et botswaanske parlement, dee as döär volksverkesingen wördt samensteld. Seyd de unafhangelikheid van Botswana is de Botswaanske Demokratiske Partye de gröätste partye van et land. Den hüdigen president is [[Mokgweetsi Masisi]].
+
+Up de lyste van umkoupbårheid steyt Botswana net achter [[Portugal]] en [[Süüdkorea]]. Dårmed is et et minst korrupte land van Afrika.
+
+=== Leager ===
+Et botswaanske leager, de Botswana Defence Force (BDF) besteyt seyd 1977. Botswana hevt sou'n 60.000 suldåten. De meysten sint upeleided döär de [[Verienigde Staoten van Amerika|Voreynigde Ståten]]. Döär untwikkelingen in med name Süüdafrika is et leager vöäral gangs üm ströypers teagen te gån en tränen vöär butenlandske vreydesmissys.
+
+=== Menskenrechten ===
+Et  inheymske [[Khoisan (volk)|San]]-volk, dat noch up de olde nomadiske wyse leavden, is teagen öären wil van öär land ehaald en in reservaten underbracht. Üm dat sou wyd te krygen möägen see gin water tappen en stünden der houge bootes up de jagd (öäre vöärnaamste wyse üm an eaten to kummen). Öäre grunden leaden in et gröätste [[Diamant|diamantengebeed]] van de wearld. De regeyring untkent dat et dårmed te maken hevt en bewäärt dat et ne wildbeskarmingsmåtregel was, al leavet de san al dusenden jåren in duursame vorholding med de natuur. In de reservaten is håste gin wark vöär et volk. Vöäle san sint drankverslaavd.
+
+Seyd 11 juni 2019 is [[homoseksualiteit]] neet meyr strafbår in Botswana. Et land hevt noch wal den [[doudsstraf]]. 
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
