--- a/Botswana.mw
+++ b/Botswana.mw
@@ -64,7 +64,7 @@ Up de lyste van umkoupbårheid steyt Botswana net achter [[Portugal]] en [[Süü
 Et botswaanske leager, de Botswana Defence Force (BDF) besteyt seyd 1977. Botswana hevt sou'n 60.000 suldåten. De meysten sint upeleided döär de [[Verienigde Staoten van Amerika|Voreynigde Ståten]]. Döär untwikkelingen in med name Süüdafrika is et leager vöäral gangs üm ströypers teagen te gån en tränen vöär butenlandske vreydesmissys.
 
 === Menskenrechten ===
-Et  inheymske [[Khoisan (volk)|San]]-volk, dat noch up de olde nomadiske wyse leavden, is teagen öären wil van öär land ehaald en in reservaten underbracht. Üm dat sou wyd te krygen möägen see gin water tappen en stünden der houge bootes up de jagd (öäre vöärnaamste wyse üm an eaten to kummen). Öäre grunden leaden in et gröätste [[Diamant|diamantengebeed]] van de wearld. De regeyring untkent dat et dårmed te maken hevt en bewäärt dat et ne wildbeskarmingsmåtregel was, al leavet de san al dusenden jåren in duursame vorholding med de natuur. In de reservaten is håste gin wark vöär et volk. Vöäle san sint drankverslaavd.
+Et  inheymske [[Khoisan (volk)|San]]-volk, dat noch up de olde nomadiske wyse leavden, is teagen öären wil van öär land ehaald en in reservaten underbracht. Üm dat sou wyd te krygen möägen see gin water tappen en stünden der houge bootes up de jagd (öäre vöärnaamste wyse üm an eaten to kummen). Öäre grunden leaden in et gröätste [[Diamant|diamantengebeed]] van de wearld. De regeyring untkent dat et dårmed to maken hevt en bewäärt dat et ne wildbeskarmingsmåtregel was, al leavet de san al dusenden jåren in duursame vorholding med de natuur. In de reservaten is håste gin wark vöär et volk. Vöäle san sint dårdöär an de drank verslaavd eraked.
 
 Seyd 11 juni 2019 is [[homoseksualiteit]] neet meyr strafbår in Botswana. Et land hevt noch wal den [[doudsstraf]]. 
 
