--- a/Botswana.mw
+++ b/Botswana.mw
@@ -68,5 +68,36 @@ Et  inheymske [[Khoisan (volk)|San]]-volk, dat noch up de olde nomadiske wyse le
 
 Seyd 11 juni 2019 is [[homoseksualiteit]] neet meyr strafbår in Botswana. Et land hevt noch wal den [[doudsstraf]]. 
 
+=== Bestüürlike indeyling ===
+Botswana besteyt uut teen distrikte:
+
+* [[Southern District (Botswana)|Southern District]]
+* [[South-East District (Botswana)|South-East District]]
+* [[Kweneng District]]
+* [[Kgatleng District]]
+* [[Central District (Botswana)|Central District]]
+* [[North-East District (Botswana)|North-East District]]
+* [[Ngamiland District]]
+* [[Kgalagadi District]]
+* [[Chobe District]]
+* [[Ghanzi District]]
+
+== Ekonomy ==
+Seyd de unafhangelikheid in 1966 is Botswana eyne van de rapst groiende ekonomien van de wearld. In de vyvtiger jåren must nen döärsneyde botswaneesk sik redden med ummerekkend €1142 in et jår. Dat groiden når € 15.129,76 in 2019. Dårmed hevt et ne vorgelykbåre leavensstandaard med [[Mexiko]]. Et land hevt sat grundstoffen, wårvan as se de upbrengsten med kloke investeringen in öäre tokumst stöäken. et land hevt souwat gin skulden in et butenland. Der is grout vertrouwen in de grundwet en de nåleaving der van, wårdöär der en seaker handelsklimaat besteyt.
+
+Butenlandske bedryve sint welkum, mär in wat sektoren kryget binnenlandske bedryve vöärrang.
+
+=== Energy ===
+Botswana sit up ne groute vöärråd koalstof, wat töt vöär kort noch de eanigste brunne vöär energyupwekking was. Petröäly gevt et der neet, mär wördt importeerd uut Süüdafrika. Et land is slim interesseerd eraked in vernybåre energybrunnen en hevt inmiddels en plan klår vöär investeringen in wind-, sünne- en biomassaenergy. Öäly is der neet evündden, mär eyn bedryv is gangs te kyken of der metaan uut koalstof etrökken kan worden.
+
+=== Financien ===
+Botswana hevt en fråi oapen bankbeleid. Underneamers künnet sat geld krygen üm en bedryv up te setten.
+
+=== Edelsteynder en -metalen ===
+Et Ministery van Mynbouw en Mineraalwinning, Gröne Technology en Energybehold höldt cyfers by oaver de winning van edelsteynder en edelmetalen. Et gröätste diamantmynbedryv, Debswana, is vöär 50% ståtsbesit. De mineralenhandel leyvert de ståt sou'n 40% van alle inkumsten. In 2007 wör der [[uranium]] evünden. Verskillende mynbouwers hebbet et höyvdkantoor in Botswana. Ouk wördt der regelmåtig söcht når [[gold]], [[kopper]], [[diamanten]] en öäly. Up sorgen dat de diamantvöärråd med sou'n 20 jår uutpütted is, hevt de regeyring beslöäten wat te doon an de swåre afhangelikheid van diamanten.
+
+Botswana's Orapa-myne is de gröätste diamantmyne van de wearld. In 2013 wör der sou'n € 1,2 miljard an diamanten når boaven ehaald.
+
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
