--- a/Botswana.mw
+++ b/Botswana.mw
@@ -99,7 +99,7 @@ Et Ministery van Mynbouw en Mineraalwinning, Gröne Technology en Energybehold h
 Botswana's Orapa-myne is de gröätste diamantmyne van de wearld. In 2013 wör der sou'n € 1,2 miljard an diamanten når boaven ehaald.
 
 ==Lüde==
-In Botswana woanet meyrere volker samen. Med 79% is et oavergroute andeyl de [[Tswana (volk)|Tswana]]. De tweyde grup sint de [[kalanga (volk)|kalanga]], med 11%. Dårnå gevt et noch de San (Basarwa), med 3%. De oaverige 7% sint blanke botswanesen en [[india]]ers. Seyd verslechterde ekonomiske umstandigheiden in [[Zimbabwe]] kummet der ouk alvoordan meyr zimbabwanen up Botswana an.
+In Botswana woanet meyrere volker samen. Med 79% is et oavergroute andeyl de [[Tswana (volk)|tswana]]. De tweyde grup sint de [[kalanga (volk)|kalanga]], med 11%. Dårnå gevt et noch de san (basarwa), med 3%. De oaverige 7% sint blanke botswanesen en [[india]]ers. Seyd verslechterde ekonomiske umstandigheiden in [[Zimbabwe]] kummet der ouk alvoordan meyr zimbabwanen up Botswana an.
 
 ===språken===
 [[Engels]]k is de nationale språke. Et oavergroute deyl van de lüde spreakt ouk [[Setswana]], ne bantuspråke. Andere språken in Botswana sint under meyr kalanga (sekalanga), [[sarwa]] (sesarwa), [[ndebele]], [[kgalagadi]], [[tswapong]], [[!Xóõ]], [[yeyi]], en in wat deylen, [[afrikaans]]k.
