--- a/2056.mw
+++ b/2056.mw
@@ -3,7 +3,7 @@
 == Gebeurtenissen ==
 * ...
 
-== Geboorn ==
+== het jaar van de teunen. teun van weegberg, de bekenste mester op de wereld houd vanzijn katten... ==
 * ...
 
 == Oet de tied ==
