Wysigingen döär [[Special:Contributions/82.169.50.96|82.169.50.96]] ([[User talk:82.169.50.96|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:46.184.88.242|46.184.88.242]]

--- a/2056.mw
+++ b/2056.mw
@@ -3,7 +3,7 @@
 == Gebeurtenissen ==
 * ...
 
-== het jaar van de teunen. teun van weegberg, de bekenste mester op de wereld houd vanzijn katten... ==
+== Geboorn ==
 * ...
 
 == Oet de tied ==
