*Empty MediaWiki Message*

--- a/Noaberschap.mw
+++ b/Noaberschap.mw
@@ -1,4 +1,4 @@
-{{Zie dv|'''Noaberschap''' mot neet verward wodden mit een '''[[buurtschop|buurtschap]]'''. Buurtschoppen bunt kleine woonpleatskes; et noaberschap is nen kulturelen angeleagenheid.}}
+{{Zie dv|'''Noaberschap''' mot neet verward wodden mit een '''[[buurtschop|buurtschap]]'''. Buurtschappen bunt kleine woonpleatskes; et noaberschap is nen kulturelen angeleagenheid.}}
 
 '''Noaberschap''' of '''naoberschap''' bunt de gezamenleke noabers in ne kleine sociale, oaverweagend agrarische samenleaving. Binnen den noaberschap besteet de noaberplicht. Dit höldt de verplichting in, dat de ''noabers'' mekare bi-j mot stoan in road en doad as dat neudig is. Et begrip is veural bekand in den [[Achterhook]], [[Twente]] en andere delen van [[Oaveriessel]] en Drenthe, moar i-j kunt et eavenens in et westen van [[Duutslaand]] vinden ([[Graofschap Bentheim]] en umgeaving).
 
