*Empty MediaWiki Message*

--- a/Platform_Nedersaksisch.mw
+++ b/Platform_Nedersaksisch.mw
@@ -1,4 +1,4 @@
-'t '''Platform Nedersaksisch''' is een samenwarkingsverbaand det in 2021 in de bienen kwaamp en det 't [[Nedersaksisch]] as taal en cultuur wil uutdragen. De samenwarkende partners bint 't [[Centrum Groninger Taal & Cultuur]], de [[Stichting Stellingwarver Schrieversronte]], 't [[Huus van de Taol]], de [[Iesselakkedemie]] en [[Erfgoedcentrum Achterhoek & Liemers]]. Op 31 meert 2021 lanceerde 't platform de webstee Nedersaksisch.com.
+'t '''Platform Nedersaksisch''' is een samenwarkingsverbaand det in 2021 in de bienen kwaamp en det 't [[Nedersaksisch]] as taal en cultuur wil uutdragen. De samenwarkende partners bint 't [[Centrum Groninger Taal & Cultuur]], de [[Stichting Stellingwarver Schrieversronte]], 't [[Huus van de Taol]], de [[Iesselakkedemie]] en [[Erfgoedcentrum Achterhoek en Liemers]]. Op 31 meert 2021 lanceerde 't platform de webstee Nedersaksisch.com.
 
 Op de webstee wördt inegaone op verscheiden menieren waorop 't Nedersaksisch in de samenleving leeft en mèensen mit menare verbiendt. Daorbij is der andacht veur gebieden as taal, muziek, theater, film, schrieverije, tradities (zoas [[båke|paosvuren]], [[karbietskeetn|carbidschieten]] en [[noaberschap|naoberschop]]), toerisme en economische samenwarking tussen de Nedersaksische pervincies.
 
