Manifest 'Nedersaksisch leeft en verbindt' enuumd

--- a/Platform_Nedersaksisch.mw
+++ b/Platform_Nedersaksisch.mw
@@ -2,9 +2,9 @@
 
 Op de webstee wördt inegaone op verscheiden menieren waorop 't Nedersaksisch in de samenleving leeft en mèensen mit menare verbiendt. Daorbij is der andacht veur gebieden as taal, muziek, theater, film, schrieverije, tradities (zoas [[båke|paosvuren]], [[karbietskeetn|carbidschieten]] en [[noaberschap|naoberschop]]), toerisme en economische samenwarking tussen de Nedersaksische pervincies.
 
-De webstee signaleert een nei Nedersaksisch gevuul in de samenleving en verwiest dernaor as 'naoberschap in de 21ste eeuw'. Der wördt wat oogmarken eformuleerd: laoten zien det 't Nedersaksische gevuul leeft, laoten ervaren det 't verbiendt, en verkennen hoe of 't Nedersaksisch naoberschap in de 21ste eeuw benut kan wörden.
+De webstee signaleert een nei Nedersaksisch gevuul in de samenleving en verwiest dernaor as 'naoberschap in de 21e eeuw'. Der wördt wat oogmarken eformuleerd: laoten zien det 't Nedersaksische gevuul leeft, laoten ervaren det 't verbiendt, en verkennen hoe of 't Nedersaksisch naoberschop in de 21ste eeuw benut kan wörden.
 
-Wieder bint der een neisofdieling en een agenda waoraj kunt vienden wat der op Nedersaksisch gebied zoal organiseerd wördt.
+Op de webstee wördt een manifest anebeuden, 'Nedersaksisch leeft en verbindt'. Wieder bint der een neisofdieling en een agenda waoraj kunt vienden wat der op Nedersaksisch gebied zoal organiseerd wördt.
 
 ==Reacties==
 Een beste butse Nederlaandstalige neismedia en internetmagazines kondigden de komst van de webstee an.
