--- a/Annie_uut_de_Bochte_(Bökkers).mw
+++ b/Annie_uut_de_Bochte_(Bökkers).mw
@@ -1,6 +1,6 @@
 '''Annie uut de Bochte''' is een nummer van de [[Sallaand]]<nowiki/>se [[Rock|rockband]] [[Bökkers]]. Et nummer is een [[Rock|rocknummer]]. Et nummer is in [[2014]] emaakt en zit in et [[album]] [[Humme (Bökkers)|Humme]]. Op [[3 april]] [[2021]] was et nummer op [[YouTube]] ruum 1,7 miljoen keer an eklikt.
 
-Et nummer giet oaver een maagien det met de [[bromfietse]] völs te härd deur de bochte hen jaagden en daordeur uut de bochte is evlöögen. Zie hef hiernao nooit meer heuzölf ewest.
+Et nummer giet oaver een maagien det met de [[bromfietse]] völs te härd deur de bochte hen gung en daordeur uut de bochte is evlöögen. Zie hef hiernao nooit meer heuzölf ewest.
 
 {{Dialekt|sdz}}
 [[Kategorie:Bökkers]]
