*Empty MediaWiki Message*

--- a/De_Fofftig_Penns.mw
+++ b/De_Fofftig_Penns.mw
@@ -1,11 +1,13 @@
 [[Ofbeelding:De_fofftig_Penns_live_Hamborg.jpg|thumbnail|De fofftig Penns live in Hambörg, 2010]]
-'''De Fofftig Penns''' (''De Vieftig Pennings'') is ne dreeköppige [[Platduuts]]e muziekgroep. De dree jongs oet [[Bremen]]-Noord, Malte Battefeld (Riemelmeester Malde) oet [[Vegesack]], Jakob Köhler (Kommodige Jaykopp) oet [[Grambke]] en Torben Otten (Plietsche Torbän) oet Aumond, zeent in 2003 bie mekoar ekömn um [[Hip-Hop]]- en [[Funk]]-leedkes met Platduutse tekste te maakn. Öarn naam keump van n [[Verienigde Staoten van Amerika|Amerika]]ansen [[rap]]per [[50 cent]], umdet den zin nommer "P.I.M.P" vuurbeeld was vuur t eerste nommer van de Fofftig Penns.
+'''De Fofftig Penns''' (''De Vieftig Pennings'') was ne dreeköppige [[Platduuts]]e muziekgroep. De dree jongs oet [[Bremen]]-Noord, Malte Battefeld (Riemelmeester Malde) oet [[Vegesack]], Jakob Köhler (Kommodige Jaykopp) oet [[Grambke]] en Torben Otten (Plietsche Torbän) oet Aumond, zeent in 2003 bie mekoar ekömn um [[Hip-Hop]]- en [[Funk]]-leedkes met Platduutse tekste te maakn. Öarn naam keump van n [[Verienigde Staoten van Amerika|Amerika]]ansen [[rap]]per [[50 cent]], umdet den zin nommer "P.I.M.P" vuurbeeld was vuur t eerste nommer van de Fofftig Penns.
 
 December 2003 hebt ze öar eerste single "P.I.N.T" oet ebracht en meart 2004 öar tweede single "Jungkeerls (P.I.N.T.)". Vuur beaide nommers zeent ook videoklips op enömn. Noa vief moand skeaidn ze dr wier met oet.
 
 Januari 2008 kömn ze wier bie mekoar um t eerste echte album op te nemn, den't in t zommer van det joar kloar was. t Eerste nommer was as single oetbracht wör was "Platt", wat duur verskeaidene DJs in Noord[[Duutslaand]] en [[Berlien]] regelmoatig edreeid wör. In öare 'pauze' zeent ze oawer skakeld noar ne stiel wat ze zelf elektro-hiphop neumt. De Fofftig Penns hebt ook n eegn Platenlabel: Kommodig Grambke.
 
 "Dat gifft hüüttodaags so veel Rappers dee mer bloots över Geweld, Drugs un Vrouwlüüd snacken köönt. Wat dat ok anners geiht, dat wüllt wi de Lüüd, ok öllere Lüüd, wiesen." Vertelt Riemelmeester Malde de pärs. "Kommodig" in "Kommodig Grambke" is ne lange neuze noar t "Aggro" in "Aggro Berlin". Det is n platenlabel met rappers, dee gearne met geweld umme goat. "Al dee aggressie, det doot vie bespotn".
+
+In [[2018]] skeiden ze der met oet.
 
 ==Plaatnriege==
 * December 2003: P.I.N.T. (CD)
