*Empty MediaWiki Message*

--- a/Bökkers.mw
+++ b/Bökkers.mw
@@ -47,3 +47,4 @@ In 2019 is et nye album üütekommen under de name ''Leaven in de brouweri-je''.
 {{Dialekt|sdz||Nysassiske Skryvwyse}}
 
 [[Kategorie:Nederlaandse muziekgroep‎]]
+[[Kategorie:Bökkers]]
