--- a/Hendrik_Jan_Bökkers.mw
+++ b/Hendrik_Jan_Bökkers.mw
@@ -13,3 +13,4 @@ In [[2019]] is Bökkers vöär een pår dagen in de weake by et [[Ysselakademy]]
 {{Dialekt|sdz||Nysassiske Skryvwyse}}
 
 [[Kategorie:Muzikaant uut Oaveriessel]]
+[[Kategorie:Bökkers]]
