--- a/Bökkers.mw
+++ b/Bökkers.mw
@@ -3,7 +3,7 @@
 
 Lüde segget mangs dat Bökkers 'et nye Normaal' is. Der sit oavereynkumsten in de musikale styl en in et gebrüük van [[Nedersaksisch|neadersassisk]], mar Hendrik Jan Bökkers hevt sik üütespröäken teagen et läbel [[burenrock]] vöär syn bänd.<ref>[https://www.youtube.com/watch?v=ioSesfSrn5c Hendrik Jan Bökkers in een podcast] van [[Wearldspråke]] (29 augustus 2019)</ref>
 
-In 2020 beslöyt de band uut mekaar te gån. De bandleaden hadden verskillende ideen oaver musikstyl. Ne afskeidstour wör epland, mär kunde döär [[COVID-19]] nit döärgån. Undertüsken hevt vöärman Hendrik Jan Bökkers anekundigd med 'n nye bandbesetting wyder te gån.
+In 2020 beslöyt de band uut mekaar te gån. De bandleaden hadden verskillende ideen oaver musikstyl. Ne afskeidstour wör epland, mär kunde döär [[COVID-19]] nit döärgån. Undertüsken hevt vöärman Hendrik Jan Bökkers anekundigd med 'n nye bandbesetting wyder te gån. See gåt nye musik maken en ouk weyr opträden.<ref>{{Citeer web|url=https://www.agentsafterall.nl/nieuws/bericht/bokkers-gaat-door/|titel=BÖKKERS GAAT DOOR|bezochtdatum=3 april 2021|datum=26 februari 2021|uitgever=Agents After All}}</ref>
 
 ==Bändleaden==
 * Hendrik Jan Bökkers (sang, gitare) 
