*Empty MediaWiki Message*

--- a/Bökkers.mw
+++ b/Bökkers.mw
@@ -43,6 +43,10 @@ In 2019 is et nye album üütekommen under de name ''Leaven in de brouweri-je''.
 |1312
 |}
 
+== Diskografy ==
+
+* ''[[Diskografy van Bökkers]]''
+
 ==Verwysings==
 <references/>
 
