--- a/Bökkers.mw
+++ b/Bökkers.mw
@@ -7,14 +7,17 @@ In 2020 beslöyt de band uut mekaar te gån. De bandleaden hadden verskillende i
 
 ==Bändleaden==
 * Hendrik Jan Bökkers (sang, gitare) 
-* Erik Neimeijer (sang, gitare, örgel, bluesharp) 
-* Arjan Pronk (bas)  
-* Jeroen Hobert (drüms)
+* Stef Hoekjen (drums)
+* Bart Petter (bas)
+* Jeroen Sweers (tootsen)
 
 Vrogger:
 
 *Bastiaan Bökkers (bas, 2010-2013)
 * Arjan Mulders (drums, 2010-2013)
+* Erik Neimeijer (sang, gitare, örgel, bluesharp) 
+* Arjan Pronk (bas)  
+* Jeroen Hobert (drüms)
 
 ==Albums==
 Bökkers hevt verskillende [[albums]] uutebrached: 
