--- a/Siemon_Reker.mw
+++ b/Siemon_Reker.mw
@@ -18,7 +18,7 @@ Reker is ain van de soamenstellers en schrievers van t ''[[Handboek Nedersaksisc
 
 ==Wellen==
 *Henk Bloemhoff, Jurjen van der Kooi, Hermann Niebaum en Siemon Reker (red.) (2008), ''[[Handboek Nedersaksische Taal- en Letterkunde]]'', Azzen: Van Gorcum, ISBN 978-90-232-4329-8
-*[http://www.noorderbreedte.nl/onder.php3?artikel=385 ''Noorderbreedte: Breed tijdschrift over Noord-Nederland]
+*[http://www.noorderbreedte.nl/onder.php3?artikel=385 ''Noorderbreedte: Breed tijdschrift over Noord-Nederland'']
 
 {{DEFAULTSORT:Reker, Siemon}}
 [[Kategorie:Grunnegs artikel]]
