*Empty MediaWiki Message*

--- a/Nedersaksische_zinnen.mw
+++ b/Nedersaksische_zinnen.mw
@@ -181,9 +181,9 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |Het spijt me||''t Spiet mie dunders''||' spie' mie döndes
 |}
 
-:''De "oa" wordt oetsproken as de "oo" ien t Nederlaandse "oor".
-:''De "ì" wordt oetsproken as de "ee" ien t Nederlaandse "peer".
-:''De "ò" wordt oetsproken as de "o" ien t Nederlaandse "lot".
+:''De "oa" wordt oetsproken as de "oo" ien t Nederlaandse "oor".''
+:''De "ì" wordt oetsproken as de "ee" ien t Nederlaandse "peer".''
+:''De "ò" wordt oetsproken as de "o" ien t Nederlaandse "lot".''
 :''De ' wordt oetsproken as n steut, vergeliekboar mit n hail kört oetsproken "u"''
 :''As mit de zin "Waar kom je vandaan" maind wordt woar aine laangerleden vot komt wordt der zègd "Woarheer komst doe?"''
 
@@ -440,8 +440,8 @@ Ien de eerste kolommen stoan de Nederlaandse zinnen, ien de twijdent stoan de ve
 |Het spijt me||''t Spiet m'n''||ut spiet mun
 |}
 
-:''De "ao" wodt uutspreuken as de "oo" in et Nederlaanse "oor".
-:''De "ì" wodt uutspreuken as de "ee" in et Nederlaanse "peer".
+:''De "ao" wodt uutspreuken as de "oo" in et Nederlaanse "oor".''
+:''De "ì" wodt uutspreuken as de "ee" in et Nederlaanse "peer".''
 
 {{Nedersaksische spraokgidsen}}
 
