--- a/Diskografy_van_Bökkers.mw
+++ b/Diskografy_van_Bökkers.mw
@@ -1,38 +1,38 @@
-Hyronder is en lyste te seen met de '''diskografy van [[Bökkers]]''', en [[Sallaand|sallandske]] [[Rock|rockband]]. Vanof [[2010]] is er eyn livealbüm üütebracht en ses stüdioalbüms (töt [[2021]])
+Hyronder is en lyste te seen met de '''diskografy van [[Bökkers]]''', en [[Sallaand|sallandske]] [[Rock|rockband]]. Vanof [[2010]] syn er eyn livealbüm üütebracht en ses stüdioalbüms (töt [[2021]]).
 
 == Albüms ==
 
 === Stüdioalbüms ===
-{| class="wikitable"
-! align="center" valign="top" width="40" |Jår
-! align="left" valign="top" |Albüm
+{| class="wikitable vatop"
+! align="center" width="40" |Jår
+! align="left" |Albüm
 |-
-| align="center" valign="top" |[[2011]]
-| align="left" valign="top" |''[[Bökkers (album)|Bökkers]]''
+| align="center" |[[2011]]
+| align="left" |''[[Bökkers (album)|Bökkers]]''
 |-
-| align="center" valign="top" |[[2013]]
-| align="left" valign="top" |''[[Morattamottamotta (album)|Morattamottamotta]]''
+| align="center" |[[2013]]
+| align="left" |''[[Morattamottamotta (album)|Morattamottamotta]]''
 |-
-| align="center" valign="top" |[[2014]]
-| align="left" valign="top" |''[[Humme (album)|Humme]]''
+| align="center" |[[2014]]
+| align="left" |''[[Humme (album)|Humme]]''
 |-
-| align="center" valign="top" |[[2015]]
-| align="left" valign="top" |''[[Blixer Elixer (album)|Blixer Elixer]]''
+| align="center" |[[2015]]
+| align="left" |''[[Blixer Elixer (album)|Blixer Elixer]]''
 |-
-| align="center" valign="top" |[[2017]]
-| align="left" valign="top" |''[[Schorem Uut De Schiettente (album)|Schorem Uut De Schiettente]]''
+| align="center" |[[2017]]
+| align="left" |''[[Schorem Uut De Schiettente (album)|Schorem Uut De Schiettente]]''
 |-
-| align="center" valign="top" |[[2019]]
-| align="left" valign="top" |''[[Leaven In De Brouweri-je (album)|Leaven In De Brouweri-je]]''
+| align="center" |[[2019]]
+| align="left" |''[[Leaven In De Brouweri-je (album)|Leaven In De Brouweri-je]]''
 |}
 
 === Livealbüms ===
-{| class="wikitable"
-! align="center" valign="top" width="40" |Jår
-! align="left" valign="top" |Albüm
+{| class="wikitable vatop"
+! align="center" width="40" |Jår
+! align="left" |Albüm
 |-
-| align="center" valign="top" |[[2016]]
-| align="left" valign="top" |''[[Live & Knetterhard (album)|Live & Knetterhard]]''
+| align="center" |[[2016]]
+| align="left" |''[[Live & Knetterhard (album)|Live & Knetterhard]]''
 |}
 
 {{Dialekt|sdz}}
