[[:Kategorie:Laand]] derbie edaon ([[Wikipedia:HotCat|HotCat.js]])

--- a/Botswana.mw
+++ b/Botswana.mw
@@ -108,3 +108,4 @@ In Botswana woanet meyrere volker samen. Med 79% is et oavergroute andeyl de [[T
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
+[[Kategorie:Laand]]
