--- a/Botswana.mw
+++ b/Botswana.mw
@@ -104,7 +104,8 @@ In Botswana woanet meyrere volker samen. Med 79% is et oavergroute andeyl de [[T
 ===språken===
 [[Engels]]k is de nationale språke. Et oavergroute deyl van de lüde spreakt ouk [[Setswana]], ne bantuspråke. Andere språken in Botswana sint under meyr kalanga (sekalanga), [[sarwa]] (sesarwa), [[ndebele]], [[kgalagadi]], [[tswapong]], [[!Xóõ]], [[yeyi]], en in wat deylen, [[afrikaans]]k.
 
-
+=== Gelöyv ===
+Ungeveyr 77% van de lüde sint [[Christendom|kristelik]], en dan vöärnamelik [[Protestantisme|protestantsk]]. De tweyde-gröyste grup sint de neet-gelöyvigen, med 20%. Wyders gevt et noch nen handvul [[Islam|moslims]], [[Hinduisme|hindus]] en [[bahá'i]]. De oaverige grup is [[Animisme|animistisk]] en gelöyvt in buskgeysten.
 
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
