--- a/Geliefden_van_Valdaro.mw
+++ b/Geliefden_van_Valdaro.mw
@@ -1,9 +1,9 @@
 [[Ofbeelding:Mantua2.jpg|thumb|De Geliefden van Valdaro: hij links, zij rechts]]
 De '''Geliefden van Valdaro''' bint twee mèenselijke [[skelet|skeletten]] van zo'n zesduzend jaor old. Ze bint deur archeologen evunden in een [[Neolithicum|neolitisch]] graf in San Giorgio in de buurte van [[Mantua (stad)|Mantua]], Italië, in 2007. De beiden waren begraven mit de gezichten naor menare toe en de naarms rond menare, waordeur ze een liefdespaartien liekt te wezen.<ref>[http://www.stonepages.com/news/archives/002264.html Stone Pages: ''Prehistoric skeletons found locked in eternal embrace'' (11 febrewaori 2007)]</ref>
 
-De opgraving wördden eleid deur archeologe Elena Maria Menotti. 't Stel bint een man en een vrouwe, beidend tussen de achttien en twintig jaor en ongeveer 1m57 lange.<ref>[https://archive.archaeology.org/0801/abstracts/valdaro.html Archaeology.org: ''Eternal Embrace'' (jannewaori/febrewaori 2008)]</ref><ref>[http://content.time.com/time/world/article/0,8599,2092970,00.html Time: ''6,000 Years Later, the 'Lovers of Valdaro' Need a New Home'' (13 september 2011)]</ref>
+De opgraving wördden eleid deur archeologe Elena Maria Menotti. 't Stel bint een man en een vrouwe, beidend tussen de achttien en twintig jaor en ongeveer 1m57 laank.<ref>[https://archive.archaeology.org/0801/abstracts/valdaro.html Archaeology.org: ''Eternal Embrace'' (jannewaori/febrewaori 2008)]</ref><ref>[http://content.time.com/time/world/article/0,8599,2092970,00.html Time: ''6,000 Years Later, the 'Lovers of Valdaro' Need a New Home'' (13 september 2011)]</ref>
 
-Bij de nakke van de man wördden een [[vuurstien|vuurstienen]] pielpunte evunden. Naost de dij van de vrouwe lag een laank vuurstienen lemmet en onder heur pelvis lagen twee vuurstienen messen. [[Osteologie|Osteologisch]] onderzuuk leverden gien bewies veur een gewelddaodige dood, breuken of microtrauma. Grootkaans bint daorumme de vuurstienen veurwarpen mit de beiden begraven as [[grafgift|grafgiften]].<ref>[http://www.thehistoryblog.com/archives/12797 The History Blog: ''Neolithic lovers seek new home'']</ref>
+Bij de nakke van de man wördden een [[vuurstien|vuurstienen]] pielpunte evunden. Naost de dij van de vrouwe lag een fiks vuurstienen lemmet en onder heur pelvis lagen twee vuurstienen messen. [[Osteologie|Osteologisch]] onderzuuk leverden gien bewies veur een gewelddaodige dood, breuken of microtrauma. Grootkaans bint daorumme de vuurstienen veurwarpen mit de beiden begraven as [[grafgift|grafgiften]].<ref>[http://www.thehistoryblog.com/archives/12797 The History Blog: ''Neolithic lovers seek new home'']</ref>
 
 In september 2011 koj de skeletten veur 't eerst zien in 't Nationaal Archeologisch Museum van Mantua.<ref>[http://jezebel.com/5839639/6000-year-old-lovers-make-debut-in-italy Jezebel: ''6,000-Year-Old Lovers Make Debut In Italy'' (13 september 2011)]</ref> In 2014 kwamen ze permanent in dit museum terechte, daor as ze onder barstbestendig glas te bekieken bint.<ref>[https://milano.corriere.it/notizie/cronaca/14_aprile_11/due-scheletri-teca-nuova-casa-amanti-435eadc6-c17f-11e3-9f36-c28ea30209b6.shtml Corriere della sera: ''Due scheletri e una teca. La nuova casa degli amanti'' (11 april 2014)]</ref>
 
