*Empty MediaWiki Message*

--- a/Geliefden_van_Valdaro.mw
+++ b/Geliefden_van_Valdaro.mw
@@ -1,7 +1,7 @@
 [[Ofbeelding:Mantua2.jpg|thumb|De Geliefden van Valdaro: hij links, zij rechts]]
 De '''Geliefden van Valdaro''' bint twee mèenselijke [[skelet|skeletten]] van zo'n zesduzend jaor old. Ze bint deur archeologen evunden in een [[Neolithicum|neolitisch]] graf in San Giorgio in de buurte van [[Mantua (stad)|Mantua]], Italië, in 2007. De beiden waren begraven mit de gezichten naor menare toe en de naarms rond menare, waordeur ze een liefdespaartien liekt te wezen.<ref>[http://www.stonepages.com/news/archives/002264.html Stone Pages: ''Prehistoric skeletons found locked in eternal embrace'' (11 febrewaori 2007)]</ref>
 
-De opgraving wördden eleid deur archeologe Elena Maria Menotti. 't Stel bint een man en een vrouwe, beidend tussen de achttien en twintig jaor en ongeveer 1m57 laank.<ref>[https://archive.archaeology.org/0801/abstracts/valdaro.html Archaeology.org: ''Eternal Embrace'' (jannewaori/febrewaori 2008)]</ref><ref>[http://content.time.com/time/world/article/0,8599,2092970,00.html Time: ''6,000 Years Later, the 'Lovers of Valdaro' Need a New Home'' (13 september 2011)]</ref>
+De opgraving wördden eleid deur archeologe Elena Maria Menotti. 't Stel bint een man en een vrouwe, beidend tussen de achttien en twintig jaor toen ze uut de tied kwamen en ongeveer 1m57 laank.<ref>[https://archive.archaeology.org/0801/abstracts/valdaro.html Archaeology.org: ''Eternal Embrace'' (jannewaori/febrewaori 2008)]</ref><ref>[http://content.time.com/time/world/article/0,8599,2092970,00.html Time: ''6,000 Years Later, the 'Lovers of Valdaro' Need a New Home'' (13 september 2011)]</ref>
 
 Bij de nakke van de man wördden een [[vuurstien|vuurstienen]] pielpunte evunden. Naost de dij van de vrouwe lag een fiks vuurstienen lemmet en onder heur pelvis lagen twee vuurstienen messen. [[Osteologie|Osteologisch]] onderzuuk leverden gien bewies veur een gewelddaodige dood, breuken of microtrauma. Grootkaans bint daorumme de vuurstienen veurwarpen mit de beiden begraven as [[grafgift|grafgiften]].<ref>[http://www.thehistoryblog.com/archives/12797 The History Blog: ''Neolithic lovers seek new home'']</ref>
 
