--- a/Berkel.mw
+++ b/Berkel.mw
@@ -5,7 +5,7 @@
 De '''Berkel''' is n [[rivier]]ken dat in [[Duutslaand]] ontsprunk en bi'j [[Rekken]] [[Nederlaand]] binnen kump. Bi'j de Duutse stad [[Billerbeck]] is ne offisiele bronne woar de Berkel ontsprunk, moar wieterop streumt water van meerdere bronnen in de bekke. De gemeente [[Berkelland]] hef zienen name an de Berkel te danken.
 
 ==Löp==
-De eerste kilemeters [[meander]]t de Berkel stark en lik et neet völle meer dan ne [[bekke]]. In et darp Rekken, ienige honderden meters op Nederlaands gebeed is nen 'zandvang' an-elegd. Dat is ne verbreding, zodat et zaand wat et riveerken met-ebracht hef kan ofzinken. Vanof doar is de Berkel ekanaliseerd ewodden. De Berkel mundt oet bi'j [[Zutfent]] in de [[Iessel]]. Al mit al is de Berkel 110 kilemeter lange.
+De eerste kilemeters [[meander]]t de Berkel stark en lik et neet völle meer dan ne [[bekke]]. In et darp Rekken, ienige honderden meters op Nederlaands gebeed is nen 'zandvang' an-elegd. Dat is ne verbreding, zodat et zaand wat et riveerken met-ebracht hef kan ofzinken. Vanof doar is de Berkel ekanaliseerd ewodden. De Berkel mundt oet bi'j [[Zutfent|fent]] in de [[Iessel]]. Al mit al is de Berkel 110 kilemeter lange.
 
 ==Name==
 In et [[dialect]] van [[Eibargen]] wöd de Berkel as 'de Bekke' eneumd. Bi'j [[Vreden]] neumt zee um 'die Bääke'. Mangs, moar neet zo vake wodden et den 'Barkel' eneumd. Olde schriefwiezen bunt: 
@@ -13,8 +13,8 @@ In et [[dialect]] van [[Eibargen]] wöd de Berkel as 'de Bekke' eneumd. Bi'j [[V
 *[[1322]]: Bercla (Vreden)
 *[[1354]]: an der Bercle (Vreden)
 *[[1363]]: Berclo (Coesfeld)
-*[[1422]]: die Berkel (Zutfent)
-*[[1465]]: Berckel (Zutfent)
+*[[1422]]: die Berkel (fent)
+*[[1465]]: Berckel (fent)
 *[[1481]]: Berckel (Vreden)
 *ca. [[1540]]: Berckel ([[Lochem]])
 
@@ -34,7 +34,7 @@ Et Waterskap [[Rien]] en Iessel hef beslotten de riveren van den [[Achterhook]] 
 * [[Vreden]]
 * [[Berkelland]]
 * [[Lochem]]
-* [[Zutfent]]
+* [[Zutfent|fent]]
 
 ==Nedersaksisch==
 *[[Achterhooks]]:
@@ -47,7 +47,8 @@ Et Waterskap [[Rien]] en Iessel hef beslotten de riveren van den [[Achterhook]] 
 **''die Bääke'' ([[Vrene]])
 
 == Uutgoande verwiezingen ==
-*[http://www.berkelproject.nl Webstea van et Berkel Projekt]
+*[https://deberkel.info Informatie oaver de Berkel van Billerbeck tut Zutfent]
+*[https://www.wrij.nl/thema/actueel/projecten/actuele-projecten/beleef-berkel-almen/ Webstea van et Berkel Projekt van Waterskap Rienen Iessel]
 *[http://www.wrij.nl/ Waterskap Rien en Iessel]
 
 *[http://www.heerlijkheidborculo.nl/geschiedenis/Berkel/Berkelstart.htm Berkel geschiedenis HeerlijkheidBorculo.nl]
