*Empty MediaWiki Message*

--- a/Une.mw
+++ b/Une.mw
@@ -1,4 +1,4 @@
-'''Une''' ([[Nederlaands|Nederlans]]: ''Oene'') is een [[daarp|darp]] in 't noordoosten van de [[pervincie|pervinsie]] [[Gelderland]]. 't Darp maak deel uut van de gemeente [[Epe]]. Une hef ongeveer 1.500 [[bevolking|inwoners]]. Une is verbunnen mit Epe via de Eper-/Unerweg, en lig binnen de stedendriehoek [[Apeldoorne (stad)|Apeldoorne]] - [[Dèventer]] - [[Zwolle (Oaveriessel)|Zwolle]].
+'''Une''' ([yːnə], [[Nederlaands|Nederlans]]: ''Oene'') is een [[daarp|darp]] in 't noordoosten van de [[pervincie|pervinsie]] [[Gelderland]]. 't Darp maak deel uut van de gemeente [[Epe]]. Une hef ongeveer 1.500 [[bevolking|inwoners]]. Une is verbunnen mit Epe via de Eper-/Unerweg, en lig binnen de stedendriehoek [[Apeldoorne (stad)|Apeldoorne]] - [[Dèventer]] - [[Zwolle (Oaveriessel)|Zwolle]].
 
 Une is onder andere bekend eworden deurdät 't darp 't centrum was van de [[tongblaor|mkz-uutbraak]] in [[2001]], waorbie in heul Nederland 260.000 dieren of-emaak mossen worden. 
 
