Wysigingen döär [[Special:Contributions/Grwen|Grwen]] ([[User talk:Grwen|oaverleg]]) weaderümmedraid tot de lätste versy van [[User:RiverMcCrossen|RiverMcCrossen]]

--- a/Nysassiske_Skryvwyse.mw
+++ b/Nysassiske_Skryvwyse.mw
@@ -229,7 +229,7 @@ In dialekten wår ē<sub>2</sub> esplitsed wördt, is vake vöär -r geen språk
 |-
 | Stellingwarvsk  || /eː/ || /eː/ || /iː/ || /ɛi/ || /iː/
 |-
-| Sallandsk un veluwsk  || /eː/, /ɛi/~/ɛː/{{Info|In een antal klein antal westveluwske dialekten}} || /eː/ || /eː/, /i:/ || /ɛi/ || /iː/
+| Sallandsk un veluwsk  || /eː/, /ɛi/~/ɛː/{{Info|In een antal klein antal westveluwske dialekten}} || /eː/ || /eː/ || /ɛi/ || /iː/
 |-
 | Twentsk un achterhooksk || /eː/ || /eː/ || /eː/ || /ɛi/ || /eː/, /iː/{{Info|In een deyl van de Achterhook}}
 |-
