--- a/Botswana.mw
+++ b/Botswana.mw
@@ -136,6 +136,18 @@ De vyv gröätste städen sint:
 Ungeveyr 77% van de lüde sint [[Christendom|kristelik]], en dan vöärnamelik [[Protestantisme|protestantsk]]. De tweyde-gröytste grup sint de neet-gelöyvigen, med 20%. Wyders gevt et noch nen handvul [[Islam|moslims]], [[Hinduisme|hindus]] en [[bahá'i]]. De oaverige grup is [[Animisme|animistisk]] en gelöyvt in buskgeysten.
 
 == Kultuur ==
+De name ''setswana'' wördt gebruked üm to vorwysen når beide de språke en kultuur van Botswana, selvs as et geyt üm andere stammen binnen et land. Üm mekander tyd van den dag te geaven hebbet de meyste stammen sou öäre eygene gebruken, mär de meysten gebruket en dreewegs handensküdden. Et algemeyn gebrukede woord vöär 'hallo' is 'dumelang'. By vöärname geböärtenissen künnet de vrouwlüde öäre gevölens van blydskap of upwinding låten blyken med julen.
+
+===Skryverye en film===
+Skryverye in Botswana geyt sou'n 20.000 jår weaderümme når de eyrste menskelike rotsteykeningen, med name in de höävels van [[Tsodilo]]. Groute hüdigendaagse skryvers sint under meyr [[Bessie Head]], geboaren in Süüdafrika mär öär heyle leaven in Botswana woand, [[Andrew Sesinyi]], [[Barolong Seboni]], Unity Dow, Galesiti Baruti, Caitlin Davies, Lauri Kubuetsile, Albert Malikongwa, Toro Mositi en Moteane Melamu.
+
+Den internationaal bekenden film ''The Gods Must be Crazy'' uut 1980 is deyls in Botswana upenöämen, net as [[The Walt Disney Company|Disney's]] ''Whispers: An Elephant's Tale'' wårin as [[Hollywood]]steare [[Angela Basset]] medspöält.
+
+===Media===
+Der sint vyv televisystations in Botswana, wårvan eyne ståtsümroop (Botswana TV). Wyders sint dat Now TV, Khuduga HD, Maru TV en EBotswana. 
+
+Der sint vyv lokale radiostations: RB1, RB2, Duma FM, Gabz FM, en Yarona FM. Wyders hevt et land darteen kranten: Mmegi, Sunday Standard, The Telegraph, Business Weekly, The Botswana Gazette, The Voice, The Guardian, Echo, Botswana People's Daily, DailyNews, Tswana Times, Weekend Post, en The Monitor.
+
 [[Kategorie: Tweants artikel]]
 [[Kategorie: Afrika]]
 [[Kategorie:Laand]]
