--- a/Connecticut.mw
+++ b/Connecticut.mw
@@ -1,4 +1,4 @@
-{{Zie dv|Sy [[Connecticut (düürverwyssyde)]] vöär andere beteykenissen van Connecticut.}}
+{{Zie dv|Sy [[Connecticut (duurverwiesziede)]] vöär andere beteykenissen van Connecticut.}}
 {{Amerikaanse staot
 | naam = State of Connecticut
 | biejnoam = ''The Constitution State''
