--- a/Connecticut.mw
+++ b/Connecticut.mw
@@ -52,7 +52,7 @@ In de panhandle sint de plaatsen [[Greenwich (Connecticut)|Greenwich]], [[Stamfo
 === Klimaat ===
 Et binnenland hevt en vuchtig kontinentaal klimaat, de küste (de veer grötste städen langs de küste) grenset an et vuchtige subtropiske klimaat. As küststreake hevt den stat årdig wat sünne-üren; ungeveyr 2400 töt 2800 et jår.
 
-De winters künnet kold enöömd worden, med ne döärsneyde wöärmde van -1 °C an de küste töt -5 °C in et noordwesten in january. Sney valt tüsken 64 cm en 254 cm dikke in et jår, med meyr sney in et noordwesten. De temperaturen in et vöär jår verskillet en et reygent der mangs. Den summerdag is et der wårm en vuchtig med döärsneyde temparuren tüsken 26 °C en 31 °C. De harvsten sint kuul en de böyme verandert in vöäle verskillende klören.
+De winters künnet kold enöömd worden, med ne döärsneyde wöärmde van −17&nbsp;°C an de küste töt −5&nbsp;°C in et noordwesten in january. Sney valt tüsken 64&nbsp;cm en 254&nbsp;cm dikke in et jår, med meyr sney in et noordwesten. De temperaturen in et vöär jår verskillet en et reygent der mangs. Den summerdag is et der wårm en vuchtig med döärsneyde temparuren tüsken 26&nbsp;°C en 31&nbsp;°C. De harvsten sint kuul en de böyme verandert in vöäle verskillende klören.
 
 Den summerdag kummet de meyste dunderskuurs vöär; der sint in döärsneyde 30 et jår. Ouk krigt den ståt in döärsneyde eynen [[warvelwind]] in et jår üm de ouren.
 {| class="wikitable" "text-align:center;font-sise:90%;"|
